other/res/restrict-escalation-verbs-roles/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-escalation-verbs-roles
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../restrict-escalation-verbs-roles.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: cr-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: cr-bad.yaml
    - apply:
        file: role-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: role-bad.yaml
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: restrict-escalation-verbs-roles
